css/usertable.css
 .table.cards {
     border: none;
     background: transparent;
     box-shadow: none;
 }

 .table.cards thead {
     display: none;
 }

 .table.cards tbody {
     display: flex;
     flex-grow: column;
     flex-direction: row;
     flex-wrap: wrap;

 }

 .table.cards tbody tr {
     width: 100%;
     margin: 0.5rem;
     border: 1px solid var(--border-color);
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow);
     background: white;
     display: flex;
     align-items: center;
 }

 .table.cards tbody tr td {
     border: 0;
     box-shadow: none;
     /* width: 100%; */
     height: 100%;
     display: block;
 }

 .table.cards tbody tr img,
 .table#persons img {
     max-height: 6rem;
 }

 .table.cards tbody tr td {
     display: flex;
     align-items: center;
     border: 0;
 }

 @media (min-width: 768px) {
     .table.cards tbody tr {
         width: 48%;
     }
 }

 @media (min-width: 1200px) {
     .table.cards tbody tr {
         width: calc(33.3% - 1rem);
     }
 }

